feat: Day1 VT Solution